Add validation for ActivityActions form
Fixes #4

--- a/client/components/ActivityActions.less
+++ b/client/components/ActivityActions.less
@@ -28,6 +28,11 @@
         .quote {
             margin: 10px;
         }
+
+        .error {
+            color: red;
+            font-size: 0.9em;
+        }
     }
 
     .contactHost {
